# 42piscine

./: README.md
OCaml/: .gitignore
OCaml/rush00/: .board.ml.swp  .game.ml.swp  .test.ml.swp  Makefile  author  board.ml  game.ml  main.ml  player.ml  test.ml  test01.txt  test02.txt
cpp/d02/: CMakeLists.txt
cpp/d02/ex00/: Fixed.cpp  Fixed.hpp  main.cpp
cpp/d02/ex01/: Fixed.cpp  Fixed.hpp  main.cpp
cpp/d02/ex02/: Fixed.cpp  Fixed.hpp  main.cpp
cpp/d03/: .gitignore  CMakeLists.txt
cpp/d06/: CMakeLists.txt
cpp/d07/: CMakeLists.txt
d00/ex01/: testDay00.tar
d00/ex03/: klist.txt
d00/ex04/: who_am_i.sh
d00/ex06/: mobile-phone.ldif
d00/ex11/: ft_magic
d01/ex02/: find_sh.sh
d02/ex01/: ft_print_reverse_alphabet.c
d02/ex04/: ft_print_comb.c
d02/ex05/: ft_print_comb2.c
d03/ex05/: ft_putstr.c
d03/ex06/: ft_strlen.c
d03/ex09/: ft_sort_integer_table.c
d04/ex01/: ft_recursive_factorial.c
d04/ex02/: ft_iterative_power.c
d04/ex03/: ft_recursive_power.c
d04/ex04/: ft_fibonacci.c
d04/ex07/: ft_find_next_prime.c
d04/ex08/: ft_eight_queens_puzzle.c
d05/ex04/: ft_strncpy.c
d05/ex08/: ft_strupcase.c
d05/ex09/: ft_strlowcase.c
d05/ex10/: ft_strcapitalize.c
d05/ex13/: ft_str_is_lowercase.c
d05/ex17/: ft_strncat.c
d05/ex18/: ft_strlcat.c
d05/ex20/: ft_putnbr_base.c
d05/ex23/: ft_print_memory.c
d06/ex00/: ft_atoi.c  ft_print_memory.c  ft_putstr.c  ft_putstr_non_printable.c  ft_str_is_alpha.c  ft_str_is_numeric.c  ft_str_is_printable.c  ft_str_is_uppercase.c  ft_strcat.c  ft_strlcpy.c  ft_strlen.c  ft_strncmp.c  ft_strrev.c  (+2 more)
(+419 files in other folders)
